# LC

./: README.md  lc.cabal
app/: Main.hs
src/COC/: COC.hs  Lexer.x  Parser.y  README.md  S.hs  U.hs
src/COC/lib/: misc.coc  nat.coc  vector.coc
src/LetRec/: Context.hs  Eval.hs  Lexer.x  Parser.y  Syntax.hs
src/MT/: Eval.hs  Syntax.hs
src/PI/: Lexer.x  PI.hs  Parser.y  S.hs  U.hs
src/PI/lib/: bool.cube  list.cube  list.pi  listmisc.pi  maybe.pi  misc.pi  natmisc.cube  pair.cube  vector.pi
src/STLC/: Context.hs  Eval.hs  Lexer.x  Parser.y  Syntax.hs  Type.hs  TypeCheck.hs
src/UTLC/: Context.hs  Eval.hs  Lexer.x  Parser.y  Syntax.hs
test/: LetRecSpec.hs  MTSpec.hs  PISpec.hs  STLCSpec.hs  UTLCSpec.hs
test/COC/: SSpec.hs  USpec.hs
test/PI/: SSpec.hs  USpec.hs
