name:                lc
version:             0.1.0
synopsis:            various of interps
description:         Please see README.md
homepage:            https://github.com/zjhmale/LC
license:             BSD3
license-file:        LICENSE
author:              zjhmale
maintainer:          zjhmale@gmail.com
copyright:           2016 zjhmale
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UTLC.Syntax
                     , UTLC.Eval
                     , UTLC.Context
                     , UTLC.Lexer
                     , UTLC.Parser
                     , STLC.Syntax
                     , STLC.Type
                     , STLC.TypeCheck
                     , STLC.Eval
                     , STLC.Context
                     , STLC.Lexer
                     , STLC.Parser
                     , LetRec.Syntax
                     , LetRec.Eval
                     , LetRec.Context
                     , LetRec.Lexer
                     , LetRec.Parser
                     , MT.Syntax
                     , MT.Eval
                     , PI.U
                     , PI.S
                     , PI.PI
                     , PI.Lexer
                     , PI.Parser
  build-depends:       base >= 4.7 && < 5
                     , array
                     , pretty
                     , mtl
                     , containers
  build-tools:         happy
                     , alex
  default-language:    Haskell2010

executable lc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lc
                     , lens
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite lc-test
  type:                exitcode-stdio-1.0
  other-modules:       UTLCSpec
                     , STLCSpec
                     , LetRecSpec
                     , MTSpec
                     , PI.USpec
                     , PI.SSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lc
                     , hspec
                     , containers
                     , pretty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zjhmale/LC
